@@ -453,6 +453,8 @@
             <configuration>
               <release>21</release>
               <compilerArgs>
+                <arg>--add-modules</arg>
+                <arg>jdk.incubator.vector</arg>
                 <arg>-Xpkginfo:always</arg>
               </compilerArgs>
               <testExcludes>
